--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
