--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stellar-burger",
-  "version": "0.1.0",
+  "name": "stellar-burgers",
+  "version": "0.4.0",
   "description": "Проектная работа 15 когорты курса 'React-разработчик' (Яндекс.Практикум)",
   "bugs": {
     "url": "https://github.com/JustKing/Stellar-Burgers/issues"
