--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "test-cy": "npx cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +59,10 @@
     ]
   },
   "devDependencies": {
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@types/uuid": "^8.3.4",
-    "jest": "^28.1.3"
+    "cypress": "^10.4.0",
+    "jest": "^28.1.3",
+    "webpack": "^5.74.0"
   }
 }
