--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stellar-burgers",
-  "version": "0.4.0",
+  "version": "0.6.0",
   "description": "Проектная работа 15 когорты курса 'React-разработчик' (Яндекс.Практикум)",
   "bugs": {
     "url": "https://github.com/JustKing/Stellar-Burgers/issues"
@@ -38,7 +38,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "test-cy": "npx cypress open"
+    "test-cy": "npx cypress open",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +63,7 @@
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@types/uuid": "^8.3.4",
     "cypress": "^10.4.0",
+    "gh-pages": "^4.0.0",
     "jest": "^28.1.3",
     "webpack": "^5.74.0"
   }
